Fixed media query.
(Without this fix the widescreen view would be effective, but we would produce a horizontal scrollbar in some cases.)

--- a/src/main.css
+++ b/src/main.css
@@ -44,7 +44,7 @@ body {
     margin: 0 auto;
 }
 
-@media screen and (min-width: 800px) and (max-height: 800px) {
+@media screen and (min-width: 980px) and (max-height: 800px) {
     .l-main--content {
         display: flex;
         justify-content: center;
